# m2-2012-projet

./: ProjectHome.md
cr/: CR-Projet.tex  seance1.tex  seance3.tex
cr/Presentation/: PlanningGantt.planner  Presentation.aux  Presentation.nav  Presentation.out  Presentation.tex  PresentationAnglais rev1.tex
cr/compteRendu/: CR-Projet.tex  (+5 more)
src/: fenetre.pro  main.cpp  mainwindow.cpp  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
trunk/: CMakeLists.txt
trunk/cr/: CR-Projet.aux  CR-Projet.tex  people.tex
trunk/cr/Presentation/: PlanningGantt.html  PlanningGantt.planner  Presentation.aux  Presentation.nav  Presentation.out  Presentation.snm  Presentation.tex  Presentation.toc  PresentationAnglais rev1.tex  PresentationAnglais.tex
trunk/cr/PresentationFinale/: Presentation.out
trunk/cr/RapportFinal/: CR-Projet.aux  CR-Projet.lof  CR-Projet.tex  CR-Projet.toc  RapportFinalV1.odt
trunk/cr/RapportFinal/img/: topSolid.eps
trunk/cr/compteRendu/: CR-Projet.aux  seance2.tex  seance6.tex
trunk/doc/: retourElastique.xls
trunk/src/: fenetre.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
trunk/src/Controler/: Visualization.cpp  Visualization.h  Visualization.hpp
trunk/src/Model/: fakesimu.cpp  fakesimu.h  punch.cpp  realscene.cpp  realscene.h  scene.cpp  scene.h  step.cpp  step.h
trunk/src/View/: GLWidget.cpp  GLWidget.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
trunk/src/View/img/: Player.xcf
trunk/src/scenes/: Document2#2.xml  example.msh  scene.dtd  simpleScene.xml
(+28 files in other folders)
